# leti-esoft-25-26-A2

./: CMakeLists.txt  main.cpp
ConsoleApp/: CMakeLists.txt
ConsoleApp/headers/views/: RegisterEmployeeUI.h  RegisterVaccineUI.h  SpecifyVaccineTypeView.h
ConsoleApp/sources/views/: RegisterEmployeeUI.cpp  RegisterVaccineUI.cpp  SpecifyVaccineTypeView.cpp
Core/: CMakeLists.txt
Core/headers/controllers/ui/: RegisterEmployeeController.h  RegisterVaccineController.h  SpecifyVaccineTypeController.h
Core/headers/domain/container/: EmployeeInMemoryContainer.h  VaccineInMemoryContainer.h  VaccineTypeInMemoryContainer.h
Core/headers/domain/exceptions/: DuplicateCodeException.h
Core/headers/domain/model/: Employee.h  EmployeeContainer.h  EmployeeRole.h  EmployeeService.h  Vaccine.h  VaccineContainer.h  VaccineService.h  VaccineTechnology.h  VaccineType.h  VaccineTypeContainer.h  VaccineTypeService.h
Core/headers/domain/repositories/: VaccineTechnologyRepository.h
Core/headers/domain/shared/: Result.h  StringUtils.h
Core/sources/controllers/ui/: RegisterEmployeeController.cpp  RegisterVaccineController.cpp  SpecifyVaccineTypeController.cpp
Core/sources/domain/exceptions/: DuplicateCodeException.cpp
Core/sources/domain/model/: Employee.cpp  EmployeeInMemoryContainer.cpp  EmployeeService.cpp  VaccineInMemoryContainer.cpp  VaccineService.cpp  VaccineType.cpp  VaccineTypeInMemoryContainer.cpp  VaccineTypeService.cpp
Core/sources/domain/shared/: Result.cpp  StringUtils.cpp
CoreTests/: CMakeLists.txt
CoreTests/domain/shared/: StringUtilsTests.cpp
docs/: TeamMembersAndTasks.md
docs/(template-files)/global-artifacts/: glossary.md
docs/(template-files)/global-artifacts/puml/: UCD.puml
docs/system-documentation/US11/: US11.md
docs/system-documentation/US11/puml/: US11-CD.puml  US11-DM.puml  US11-SD.puml  US11-SSD.puml
docs/system-documentation/global-artifacts/: README.md  SupplementarySpecifications.md  glossary.md
docs/system-documentation/global-artifacts/puml/: DomainModel.puml  UCD.puml  UCDsp1.puml  UCDsp2.puml
